<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Launcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="icon">App Icon</string>

    <string name="preference_app_tray_items">App Tray Items</string>
    <string name="preference_app_tray_items_desc">Choose which items to have in the app tray.</string>

    <string name="activity_settings">Settings</string>
    <string name="app_tray_items">app_tray_items</string>
    <string name="app_tray_enabled">app_tray_enabled</string>
    <string name="preference_app_tray_enabled">Enable App Tray</string>
    <string name="preference_app_tray_enabled_desc">
        Enable the app tray on the left side, or keep certain favorites in spinner.
    </string>

    <string name="card_notification_icon_desc">Notification App Icon</string>
    <string name="card_notification_listener">Card Notification Listener</string>

    <string name="card_notification_enabled">card_notification_enabled</string>
    <string name="preference_card_notification_title">Notification Cards</string>
    <string name="preference_card_notification_desc">Display notifications as cards.</string>

    <string name="profiles_enabled">profiles_enabled</string>
    <string name="preference_profiles_enabled_title">Profiles Enabled</string>
    <string name="preference_profiles_enabled_summary">
        Use different profiles like Tasker with different settings.
    </string>

</resources>
